--- a/Rmd/waste_tracking_analytics.Rmd
+++ b/Rmd/waste_tracking_analytics.Rmd
@@ -6,7 +6,8 @@ output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE) # default to not show any of the code.
+knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE) # default to not show any of the code, messages, or warnings.
+trunc_ellipsis <- function(x, n) if_else(nchar(x) < 30, x, paste(substr(x, 1, n), '...')) # Convenience function to cut off long labels.
 ```
 
 # Summary
@@ -35,7 +36,7 @@ The analysis proceeds as follows:
 
 ## Costs of establishment
 
-The upper and lower bounds for annual cost per establishment of implementing waste tracking and analytics systems, rounded to the nearest thousand, are **9,000** and **$20,000**. The uncertainty is due to uncertainty or variation in the following:
+The upper and lower bounds for annual cost per establishment of implementing waste tracking and analytics systems, rounded to the nearest thousand, are **\$9,000** and **\$20,000**. The uncertainty is due to uncertainty or variation in the following:
 
 * initial cost of purchasing the system (assumed range \$2,000-\$5,000)
 * annual licensing fee (assumed range \$1,000-\$2,000)
@@ -118,7 +119,7 @@ prop_kitchen_waste <- c(lower = 0.7, upper = 0.97, mode = 0.85) # Proportion kit
 
 ## 1. Identify industries to target
 
-I decided which BEA industries, of the 389 included in the detailed input-output table, to include in the foodservice classification. I classified foodservice industries into three broader sectors: restaurants, the tourism/hospitality industry, and institutional foodservice. 
+I decided which BEA industries, of the 389 included in the detailed input-output table, to include in the foodservice classification. I classified foodservice industries into three broader sectors: restaurants, the tourism/hospitality industry, and institutional foodservice. **Note on scope: foodservice provided by state and federal governments, other than educational institutions, is not currently included in the scope of this analysis but could later be if we want.**
 
 Each of the BEA industries is an aggregation of one or more 6-digit NAICS codes. Some of the BEA industries contain NAICS codes for which only part of the industries represent establishments with a food service component. For example, code 481000, "Air transportation," includes airport foodservice operations that could conceivably adopt waste tracking systems, but also a large amount of other non-food activity. The same is true for code 711200, "Spectator sports," which includes stadium foodservice.
 
@@ -213,12 +214,16 @@ susb_bea_food_sums <- susb_naics_foodservice %>%
 ```
 
 ```{r diagnostic receipts plot}
+library(directlabels)
+
 susb_bea_food_sums %>%
+  ungroup %>%
   filter(use) %>%
-  mutate(receipts_per_firm = `Total receipts`/`No. firms`) %>%
-  ggplot(aes(x = `Size class`, y = receipts_per_firm, group = BEA_Title, color = BEA_Title)) + 
-    geom_line() + scale_y_log10() + theme_minimal() +
-    theme(legend.position = 'bottom')
+  mutate(receipts_per_firm = 1 + `Total receipts`/`No. firms`, BEA_Title = trunc_ellipsis(BEA_Title, 30)) %>%
+  ggplot(aes(x = `Size class`, y = receipts_per_firm, group = BEA_Title)) + 
+  geom_line(aes(color = BEA_Title)) + geom_dl(aes(label = BEA_Title), method = 'last.qp') +
+  scale_y_log10(name = 'Receipts per firm') + theme_minimal() +
+  theme(legend.position = 'none')
 ```
 
 The plot shows that air and water transportation have $0 receipts for large firms. This is obviously a case of censored data. I used the values for smaller firms to find a regression relationship and impute the two missing values.
@@ -232,7 +237,7 @@ recbyestb <- susb_bea_food_sums %>%
 
 recbyestb %>% 
   filter(BEA_Code %in% c('481000', '483000'), receipts_per_firm > 0) %>%
-  ggplot(aes(x = empl_per_firm, y = receipts_per_firm, group = BEA_Title, color = BEA_Title)) + geom_point(size = 3) + scale_x_log10(name = 'employees per firm') + scale_y_log10(name = 'receipts per firm') + theme_minimal()
+  ggplot(aes(x = empl_per_firm, y = receipts_per_firm, group = BEA_Title, color = BEA_Title)) + geom_point(size = 3) + scale_x_log10(name = 'Employees per firm') + scale_y_log10(name = 'Receipts per firm') + theme_minimal()
 ```
 
 You can see that the total receipts per firm is essentially log-linear with number of employees per firm, so that is the relationship I used to impute the missing values. Unfortunately the number of employees was also censored for large water transportation firms so I used the number 700 taken from a similar industry (sightseeing transportation).
@@ -294,25 +299,54 @@ establishments_affected <- susb_bea_food_sums %>%
 
 ```
 
-The following two plots show the proportion of establishments that can adopt waste tracking by BEA industry, and the proportion of industry sales represented by food that is subject to waste reduction. In both cases, the threshold of &ge;20 employees is used. In the case of establishments, only the establishments belonging to NAICS codes with a foodservice component are eligible to adopt the intervention. In the case of sales, the proportions are based on the proportion of expenses in each industry that consist of food. This assumes that if, say, 10% of an industry's purchases are food, then 10% of its sales are also food (i.e. that the relative value added is the same for the foodservice part of the industry as for any other goods it sells). This assumption seems fair enough but could be relaxed potentially, if we had any relevant data.
+The following two plots show the proportion of establishments that can adopt waste tracking by BEA industry, and the proportion of industry sales represented by food that is subject to waste reduction. In both cases, the threshold of $\geq20$ employees is used. In the case of establishments, only the establishments belonging to NAICS codes with a foodservice component are eligible to adopt the intervention. In the case of sales, the proportions are based on the proportion of expenses in each industry that consist of food. This assumes that if, say, 10% of an industry's purchases are food, then 10% of its sales are also food (i.e. that the relative value added is the same for the foodservice part of the industry as for any other goods it sells). This assumption seems fair enough but could be relaxed potentially, if we had any relevant data.
 
-```{r barplots of establishment and sales proportions}
-ggplot(establishments_affected %>% ungroup %>% mutate(BEA_Title = factor(BEA_Title, levels = unique(BEA_Title))), aes(y = establishments, x = BEA_Title, fill = sector, alpha = use)) + 
+```{r barplots of establishment proportions}
+ggplot(establishments_affected %>% ungroup %>% mutate(BEA_Title = trunc_ellipsis(BEA_Title, 30), BEA_Title = factor(BEA_Title, levels = unique(BEA_Title))), aes(y = establishments, x = BEA_Title, fill = sector, alpha = use)) + 
   geom_bar(position = 'stack', stat = 'identity') +
   scale_y_continuous(name = 'Number of establishments', limits = c(0, 3e5), expand = c(0,0)) +
   scale_fill_brewer(palette = 'Set2') +
-  labs(alpha = 'Can adopt') +
+  scale_alpha_manual(name = 'Can adopt', values = c(0.6, 1)) +
   theme_bw() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
-  ggtitle('Number of establishments that can adopt waste tracking', 'based on having >20 employees and inclusion in a NAICS code that involves providing food')
+  coord_flip() +
+  theme(legend.position = 'bottom', legend.box = 'vertical') +
+  ggtitle('Establishments that can adopt waste tracking')
+```
 
-# Make a barplot of the proportion of the environmental impact that is affected
-ggplot(proportion_affected %>% ungroup %>% mutate(BEA_Title = factor(BEA_Title, levels = unique(BEA_Title))), aes(y = final_proportion, x = BEA_Title, fill = sector)) + 
+The dark shaded part of the bars are the firms that have at least 20 employees and that are included in a NAICS code within the BEA aggregation that involves providing food.
+
+```{r barplot of sales proportions}
+# Make a barplot of the proportion of sales that is affected
+ggplot(proportion_affected %>% ungroup %>% mutate(BEA_Title = trunc_ellipsis(BEA_Title, 30), BEA_Title = factor(BEA_Title, levels = unique(BEA_Title))), aes(y = final_proportion, x = BEA_Title, fill = sector)) + 
   geom_bar(stat = 'identity') +
   scale_y_continuous(name = 'Proportion of sales affected', limits = c(0,1), expand = c(0,0)) +
   scale_fill_brewer(palette = 'Set2') +
   theme_bw() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
-  ggtitle('Proportion of sales by BEA industry that will be influenced by waste tracking', 'based on proportion of expenses in each sector due to food, and excluding firms with <20 employees')
+  coord_flip() +
+  theme(legend.position = 'bottom') +
+  ggtitle('Proportion of sales influenced by waste tracking')
+```
+
+The proportion of sales is based on the proportion of expenses in the BEA group due to food, and based on firms that have at least 20 employees.
+
+
+## 5. Get baseline waste rates for each industry with LAFA
+
+**Note on scope: I am not including beverages in this analysis (alcoholic or otherwise). I don't think Leanpath or other waste trackers attempt to address beverage waste. If that is incorrect, I can add beverages back in.**
+
+We know by what relative percentage the intervention can reduce waste within each industry (based on our assumptions), but we do not yet have the baseline waste rate which we would need to get the absolute value of the reduced waste for each industry. We can get the baseline rate using LAFA data but only if we run through a few conversion steps first. This uses the Quarterly Food-at-Home Price Database (QFAHPD) as the data source for relative prices of foods. This assumes that the relative prices are the same for wholesale and retail and also uses slightly older values from 2004-2010. However since all we care about is the relative prices, this should not be a big issue.
+
+1. get relative % of purchases by BEA food growing/manufacturing industry group by \$ value for each food service industry group.
+2. convert the relative % by \$ of BEA to relative % by \$ of QFAHPD using the BEA-QFAHPD crosswalk.
+3. convert the $ values to relative weights using the QFAHPD value to weight conversion factors (price per weight).
+4. convert the relative weights of QFAHPD food groups to relative weights of LAFA groups using the crosswalk table.
+
+So the mapping needed is BEA --> QFAHPD --> LAFA. In cases where there are one-to-many mappings, the price or waste rate is taken as a simple unweighted average of the multiple categories that map back to a single one. This rough method (as compared to weighting things very precisely) is unlikely to greatly affect the result. In any case it is probably an improvement on using the very crude FAO categories as we did in the last publication.
+
+The details of the mapping are in the underlying code that this PDF is rendered from, which pulls from two crosswalk tables that I manually created on 10 Feb 2020. It's uninteresting to describe here, but the final product is a baseline food waste rate for each of the foodservice industries, based on a weighted average of the food waste rates for the different foods it sells (converting money to weight back to money again).
+
+```{r convert BEA to QFAHPD to LAFA}
+# BEA levels 1+3 to 4+6+7+8 is already subsetted from an older analysis I did.
+bea_
 ```
 
