--- a/Rmd/waste_tracking_analytics.Rmd
+++ b/Rmd/waste_tracking_analytics.Rmd
@@ -94,6 +94,8 @@ We are using the following datasets and tables:
 ```{r load_data}
 # Load packages and check whether this is being run locally or on rstudio server.
 library(tidyverse)
+library(reticulate)
+library(directlabels)
 
 is_local <- dir.exists('Q:/')
 fp <- ifelse(is_local, 'Q:', '/nfs/qread-data')
@@ -106,6 +108,9 @@ bea_codes <- read_csv(file.path(fp, 'crossreference_tables/naics_crosswalk_final
 # Load NAICS BEA crosswalks
 load(file.path(fp, 'crossreference_tables/NAICS_BEA_SCTG_crosswalk.RData'))
 bea_naics <- read_csv(file.path(fp, 'crossreference_tables/BEA_NAICS07_NAICS12_crosswalk.csv'))
+# Load LAFA
+source(file.path(fp_github, 'fwe/read_data/read_lafa.r'))
+lafa <- list(dairy, fat, fruit, grain, meat, sugar, veg)
 ```
 
 ```{r assumptions}
@@ -345,8 +350,155 @@ So the mapping needed is BEA --> QFAHPD --> LAFA. In cases where there are one-t
 
 The details of the mapping are in the underlying code that this PDF is rendered from, which pulls from two crosswalk tables that I manually created on 10 Feb 2020. It's uninteresting to describe here, but the final product is a baseline food waste rate for each of the foodservice industries, based on a weighted average of the food waste rates for the different foods it sells (converting money to weight back to money again).
 
-```{r convert BEA to QFAHPD to LAFA}
+```{r load data for waste rate calculations}
 # BEA levels 1+3 to 4+6+7+8 is already subsetted from an older analysis I did.
-bea_
+food_U <- read.csv(file.path(fp, 'crossreference_tables/level13_to_level4678_inputs.csv'), row.names = 1, check.names = FALSE)
+
+# Mapping will need to go bea --> qfahpd --> lafa
+# Load the two necessary crosswalks.
+bea2qfahpd <- read_csv(file.path(fp, 'crossreference_tables/bea_qfahpd_crosswalk.csv'))
+qfahpd2lafa <- read_csv(file.path(fp, 'crossreference_tables/qfahpd_lafa_crosswalk.csv'))
+
+# Also load the QFAHPD data so that we can get the prices.
+qfahpd2 <- read_csv(file.path(fp, 'raw_data/USDA/QFAHPD/tidy_data/qfahpd2.csv'))
+
+# Read the description of LAFA's nested category structure in.
+lafa_struct <- read_csv(file.path(fp, 'crossreference_tables/lafa_category_structure.csv'))
+
+# Get rid of unneeded rows and columns
+food_U <- food_U[, proportion_affected$BEA_Code]
+food_U <- food_U[rowSums(food_U) > 0, ]
+
+# Beverage codes should be removed.
+beveragecodes <- c('311920','311930','312110','312120','312130','312140')
+food_U <- food_U[!row.names(food_U) %in% beveragecodes, ]
 ```
 
+
+```{r convert BEA to QFAHPD to LAFA}
+# Convert the comma-separated string columns to list columns.
+bea2qfahpd <- bea2qfahpd %>%
+  mutate(QFAHPD_code = strsplit(QFAHPD_code, ';'))
+qfahpd2lafa <- qfahpd2lafa %>%
+  mutate(LAFA_names = strsplit(LAFA_names, ';'))
+
+# Do the mapping of food_U to QFAHPD codes.
+food_U_QFAHPD <- food_U %>%
+  mutate(BEA_389_code = row.names(food_U)) %>%
+  pivot_longer(-BEA_389_code, names_to = 'BEA_recipient_code', values_to = 'monetary_flow') %>%
+  left_join(bea2qfahpd %>% select(-BEA_389_def)) %>%
+  group_by(BEA_389_code, BEA_recipient_code) %>%
+  group_modify(~ data.frame(QFAHPD_code = .$QFAHPD_code[[1]], monetary_flow = .$monetary_flow/length(.$QFAHPD_code[[1]])))
+
+# Now we have the use table where each BEA code has multiple rows for the different QFAHPD codes that make it up
+# Create an aggregated version of QFAHPD to get the final price values for each code
+# Weighted average across all market groups, years, and quarters
+qfahpd_agg <- qfahpd2 %>%
+  group_by(foodgroup) %>%
+  summarize(price = weighted.mean(price, aggweight, na.rm = TRUE))
+
+# Join the aggregated QFAHPD back up with its numerical codes and LAFA names
+# Meanwhile correct a couple wrong names in the dairy category
+qfahpd_agg <- qfahpd_agg %>% 
+  mutate(foodgroup = gsub('Whole and 2%', 'Regular fat', foodgroup)) %>%
+  left_join(qfahpd2lafa, by = c('foodgroup' = 'QFAHPD_name')) %>%
+  mutate(QFAHPD_code = as.character(QFAHPD_code))
+
+# Now join the aggregated QFAHPD with the food_U mapped to QFAHPD so that the total $ can be divided by $/weight to yield a weight (or mass).
+# The units mass is in don't matter since they are all relative
+food_U_LAFA <- food_U_QFAHPD %>%
+  left_join(qfahpd_agg) %>%
+  mutate(mass_flow = monetary_flow / price)
+
+# For the unique LAFA names in the QFAHPD to LAFA mapping, extract the waste rates for 2012 or the closest year post-2012.
+lafa_to_extract <- Reduce(union, qfahpd2lafa$LAFA_names)
+
+# Split it up again by LAFA so that we can get the weights.
+# Get only the columns we care about from each LAFA element in the list
+# Then get the year closest to 2012
+lafa_df <- lafa %>% 
+  map_dfr(~ select(., Category, Year, Loss_at_consumer_level_Other__cooking_loss_and_uneaten_food__Percent, Consumer_weight_Lbs.year)) %>%
+  rename(avoidable_consumer_loss = Loss_at_consumer_level_Other__cooking_loss_and_uneaten_food__Percent,
+         consumer_weight = Consumer_weight_Lbs.year) %>%
+  filter(!is.na(avoidable_consumer_loss)) %>%
+  group_by(Category) %>%
+  summarize(avoidable_consumer_loss = avoidable_consumer_loss[which.min(abs(Year-2012))],
+            consumer_weight = consumer_weight[which.min(abs(Year-2012))])
+
+# Use nested category structure to get weighted mean rates for the coarser LAFA groups
+# for QFAHPD foods that do not resolve to the finest available level of LAFA
+lafa_df <- lafa_df %>%
+  left_join(lafa_struct, by = c('Category' = 'Food'))
+
+lafa_group_rates <- map_dfr(1:4, function(i) lafa_df %>% 
+  rename_(subgroup = paste0('subgroup', i)) %>%
+  group_by(subgroup) %>% 
+  summarize(avoidable_consumer_loss = weighted.mean(x = avoidable_consumer_loss, w = consumer_weight))) %>%
+  filter(!is.na(subgroup))
+
+# Use LAFA overall mean for prepared food in the "other" category
+overall_mean <- with(lafa_df, weighted.mean(avoidable_consumer_loss, consumer_weight))
+
+all_lafa_rates <- data.frame(Category = c(lafa_df$Category, lafa_group_rates$subgroup, 'prepared food'),
+                             avoidable_consumer_loss = c(lafa_df$avoidable_consumer_loss, lafa_group_rates$avoidable_consumer_loss, overall_mean))
+```
+
+```{r plot histogram of LAFA}
+# Rates of consumer-level "avoidable" waste by food group in LAFA (262 different foods)
+ggplot(all_lafa_rates, aes(x = avoidable_consumer_loss/100)) + 
+  geom_histogram() +
+  theme_minimal() +
+  scale_x_continuous(labels = scales::percent_format(accuracy = 1), name = 'Avoidable consumer food waste') +
+  scale_y_continuous(expand = c(0,0.1))
+```
+
+**Insert a description of fig here**
+
+```{r map mass flows to LAFA}
+# Use the same pipe as last time to spread out the LAFA names over the rows
+
+food_U_LAFA_spread <- food_U_LAFA %>%
+  group_by(BEA_389_code, BEA_recipient_code, QFAHPD_code, price) %>%
+  group_modify(~ data.frame(LAFA_name = .$LAFA_names[[1]], 
+                            mass_flow = .$mass_flow/length(.$LAFA_names[[1]]),
+                            monetary_flow = .$monetary_flow/length(.$LAFA_names[[1]]))) %>%
+  left_join(all_lafa_rates, by = c('LAFA_name' = 'Category'))
+
+# Join with the proportion of sales affected (also the same as proportion of mass affected) based on % sales that are food and the >20 employee threshold
+# Then calculate the reduction in required mass flow for each food type, and then a weighted average to get the reduction in monetary flow needed
+demand_change_fn <- function(W0, r, p) p * ((1 - W0) / (1 - (1 - r) * W0) - 1) + 1
+
+food_U_LAFA_spread <- food_U_LAFA_spread %>% 
+  left_join(proportion_affected, by = c('BEA_recipient_code' = 'BEA_Code')) %>%
+  mutate(reduction_by_mass = demand_change_fn(W0 = avoidable_consumer_loss/100, r = overall_waste_reduction, p = proportion_receipts_affected),
+         mass_flow_post_intervention = mass_flow * reduction_by_mass,
+         monetary_flow_post_intervention = mass_flow_post_intervention * price)
+
+# Sum up by old row and column index from the original food_U matrix, then reshape to make the same matrix.
+food_U_postintervention_df <- food_U_LAFA_spread %>%
+  group_by(BEA_389_code, BEA_recipient_code) %>%
+  summarize(monetary_flow = sum(monetary_flow_post_intervention, na.rm = TRUE)) 
+
+food_U_postintervention <- food_U_postintervention_df %>%
+  pivot_wider(names_from = BEA_recipient_code, values_from = monetary_flow, values_fill = list(monetary_flow = 0)) %>%
+  as.data.frame
+row.names(food_U_postintervention) <- food_U_postintervention$BEA_389_code
+food_U_postintervention <- food_U_postintervention[, !names(food_U_postintervention) %in% 'BEA_389_code']
+
+# Make the row and column order the same as food_U
+#row.names(food_U_postintervention) == row.names(food_U) # Good
+food_U_postintervention <- food_U_postintervention[, names(food_U)]
+```
+
+
+## 6. Find total food purchases averted by foodservice industry
+
+Once we have converted the monetary flows to mass flows, applied the waste rate changes, then converted them back to monetary flows, we have two matrices, a baseline and a post-intervention matrix. Each matrix has rows representing primary food growing and manufacturing industries, and columns representing foodservice industries. The values in the matrix are monetary flows, in millions of dollars, from each of the primary industries to the secondary industries in the baseline case and in the counterfactual case where the intervention was adopted, respectively.
+
+Here I give the marginal column totals (how much each foodservice industry has to buy, total), and the marginal row totals (how much primary production is needed to supply the foodservice industry). The difference between the baseline and counterfactual represents the industry demand that is reduced by the successful waste reduction intervention.
+
+## 7. Use input-output model to calculate impact averted by intervention
+
+## 8. Compare cost of implementation with environmental benefit
+
+## 9. Uncertainty analysis
